<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.faza.project.expertsystemai.Activity.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorPrimary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:paddingStart="@dimen/default_16dp_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/created_by"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:padding="@dimen/default_16dp_margin">

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/default_16dp_margin"
            android:layout_marginTop="@dimen/default_16dp_margin"
            android:background="@color/colorPrimary"
            android:text="@string/mulai"
            android:textColor="@color/colorWhite" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btn_start"
            android:gravity="center"
            android:text="@string/main_title"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_start"
            android:gravity="center"
            android:text="@string/main_subtitle"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

</RelativeLayout>